Change Collection Type Display Name

--- a/src/api/language/content-types/language/schema.json
+++ b/src/api/language/content-types/language/schema.json
@@ -4,7 +4,7 @@
   "info": {
     "singularName": "language",
     "pluralName": "languages",
-    "displayName": "Language",
+    "displayName": "38. Language",
     "description": ""
   },
   "options": {
